# cgproj

./: .gitignore  CMakeLists.txt  README.md
component/: background.cpp  background.hpp  camera.cpp  camera.hpp  particlesys.cpp  particlesys.hpp  texture.cpp  texture.hpp
shader/: background_f.glsl  background_v.glsl  particle_f.glsl  particle_v.glsl
src/: main.cpp
